turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:4: error: value i is not a member of Int
		droite(0.i)
                         ^