turtleart.lessons.turtleart.Main.DiskFourth.scala.code
override def run() {
	for (i<- 0.1 to 0.9 by 0.01 ) {
		droite(0.i)
		avance(100)
		recule(100)
	}

}
